# temperature-logger-rs

./: .envrc  .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/rust-temperature-logger-rs/: CMakeLists.txt  Cargo.toml
components/rust-temperature-logger-rs/src/: lib.rs  wifi.rs
main/: main.c
