[package]
name = "rust-temperature-logger-rs"
version = "0.1.0"
authors = ["Jonatan Borkowski <jonatan.borkowski@pm.me>"]
edition = "2018"
resolver = "2"

[features]
default = ["experimental"]

experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "z"

[profile.dev]
debug = false # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}

esp-idf-sys = { version = "0.31", features = ["native"] }
esp-idf-hal = "0.38"
esp-idf-svc = { version = "0.42.1", features = ["experimental", "alloc"] }

log = "0.4.17"
embedded-svc = "0.22"
embedded-hal = "0.2"

dht-sensor = "0.2.1"
ds1307 = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
embuild = "0.29"
anyhow = "1"
